# google-scholar-search-mcp

./: .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml
docs/: conf.py  configuration.rst  index.rst  installation.rst  quickstart.rst  tool-references.md
docs/_static/: custom.css
docs/api/: config.rst  index.rst  models.rst  rate_limiter.rst  scholar.rst  server.rst
docs/tools/: bulk-search.rst  get-bibtex.rst  get-citations.rst  get-paper-details.rst  index.rst  search-author.rst  search-papers.rst
src/google_scholar_mcp/: config.py  models.py  scholar.py  server.py
src/google_scholar_search_mcp/: rate_limiter.py  scholar.py
tests/: test_rate_limiter.py  test_scholar.py
