[project]
name = "google-scholar-mcp"
version = "0.1.0"
description = "MCP server for searching Google Scholar — papers, authors, citations, and BibTeX"
readme = "README.md"
authors = [ { name = "Lucas", email = "development@waetzig.net" } ]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.4.0",
    "scholarly>=1.7.11",
    "pydantic>=2.0",
]

[project.scripts]
google-scholar-mcp = "google_scholar_mcp.server:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
